<resources>
    <string name="app_name">fourtothefloor</string>

    <string name="ETEmail">Email</string>
    <string name="ETPassword">Password</string>
    <string name="login">Login</string>
    <string name="createAC">No account? Create.</string>
    <string name="ETname">Name</string>

    <string name="appLogo">Logo</string>

    <string name="TVLogin">Already a member? Login</string>
    <string name="createButton">Create</string>
    <string name="home">Home</string>
    <string name="friends">Friends</string>
    <string name="notification">Notification</string>
    <string name="profile">Profile</string>
    <string name="no_notifications">No notifications</string>
    <string name="friend_request">Friend Request</string>
    <string name="post">Post</string>
    <string name="add_image">Add Image</string>
    <string name="edit_profile_btn">Edit Profile</string>
    <string name="searchIV">search</string>
    <string name="usernameTV">Username</string>
    <string name="search">Search</string>
    <string name="send_request_btn">Send Request</string>
    <string name="person_name">Person Name</string>
    <string name="accept">Accept</string>
    <string name="name">Name</string>
    <string name="date">Date</string>
    <string name="posts">Posts</string>
    <string name="_0_likes">0 Likes</string>
    <string name="_0_comments">0 Comments</string>
    <string name="user_name">User Name</string>
    <string name="status">Status</string>
    <string name="_0_like">0 Like</string>
    <string name="_0_comment">0 Comment</string>
    <string name="comment_send">comment_send</string>
    <string name="like_img">like_img</string>
    <string name="post_user_img">post_user_img</string>
    <string name="comment_iv">comment_IV</string>
    <string name="comments">Comments</string>
    <string name="commented_person">Commented Person</string>
    <string name="this_is_a_comment">This is a comment</string>
    <string name="just_now">just now</string>
    <string name="reply">Reply</string>
    <string name="more_comments">more comments</string>
    <string name="sub_commented_person">Sub Commented Person</string>
    <string name="sub_comment_body">Sub Comment Body</string>
    <string name="notification_title">Notification Title</string>
    <string name="notification_body">Notification Body</string>
    <string name="notification_date">Notification Date</string>
    <string-array name="privacy_level">
        <item>Friends</item>
        <item>Only Me</item>
        <item>Public</item>
    </string-array>

</resources>
