<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/newsfeed_fragment"
        android:enabled="true"
        android:icon="@drawable/icon_home"
        android:title="@string/home"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/profile_friends"
        android:enabled="true"
        android:icon="@drawable/icon_friends"
        android:title="@string/friends"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/profile_notification"
        android:enabled="true"
        android:icon="@drawable/icon_notification"
        android:title="@string/notification"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/profile_fragment"
        android:enabled="true"
        android:icon="@drawable/icon_profile"
        android:title="@string/profile"
        app:showAsAction="ifRoom" />
    <!--<item
        android:id="@+id/explore_notification"
        android:enabled="true"
        android:icon="@drawable/icon_notification"
        android:title="Notification"
        app:showAsAction="ifRoom" />-->
</menu>