...
                android:id="@+id/privacy_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="10dp"
                android:layout_toStartOf="@id/postBtnTxt"
                android:entries="@array/privacy_level" />


            <TextView
                android:id="@+id/postBtnTxt"
                android:layout_width="wrap_content"
...
                android:layout_marginBottom="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:src="@drawable/img_default_user" />

            <EditText
                android:id="@+id/status_edit"
                android:inputType="text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/dialogAvatar"
                android:layout_marginEnd="5dp"
                android:layout_marginStart="10dp"
...
